<resources>
    <string name="app_name">My App Portfolio</string>


    <string name="action_settings">Settings</string>

    <!--App Portfolio-->
    <string name="strMyNan">Corey\'s Nanodegree Apps!</string>
    <string name="strSpotStream">Spotify Streamer</string>
    <string name="strScoresApp">Scores App</string>
    <string name="strLibraryApp">Library App</string>
    <string name="strBuildItApp">Build It Bigger App</string>
    <string name="strXYZApp">XYZ Reader</string>
    <string name="strCapstoneApp">Capstone: My Own App</string>

</resources>
