<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AppPortfolioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/strMyNan" />

    <Button
        android:id="@+id/btnSpotifyStreamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#F08C35"
        android:onClick="btnAppPortFolioAllClick"
        android:text="@string/strSpotStream" />

    <Button
        android:id="@+id/btnScoresApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#F08C35"
        android:onClick="btnAppPortFolioAllClick"
        android:text="@string/strScoresApp" />

    <Button
        android:id="@+id/btnLibraryApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#F08C35"
        android:onClick="btnAppPortFolioAllClick"
        android:text="@string/strLibraryApp" />

    <Button
        android:id="@+id/btnBuildIt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#F08C35"
        android:onClick="btnAppPortFolioAllClick"
        android:text="@string/strBuildItApp" />

    <Button
        android:id="@+id/btnXYZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#F08C35"
        android:onClick="btnAppPortFolioAllClick"
        android:text="@string/strXYZApp" />

    <Button
        android:id="@+id/btnCapstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#ff3a80f0"
        android:onClick="btnAppPortFolioAllClick"
        android:text="@string/strCapstoneApp" />

</LinearLayout>
